[package]
name = "fts-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
quick-xml = "0.31"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
